--- a/ks.cfg
+++ b/ks.cfg
@@ -1,73 +1,26 @@
 install
-cdrom
-lang en_US.UTF-8
-keyboard us
-network --bootproto=dhcp
-rootpw vagrant
-firewall --disabled
-selinux --permissive
-timezone UTC
-unsupported_hardware
-bootloader --location=mbr
 text
-skipx
-zerombr
-clearpart --all --initlabel
-autopart
-auth --enableshadow --passalgo=sha512 --kickstart
-firstboot --disabled
-reboot
-user --name=vagrant --plaintext --password vagrant
+cdrom
+auth --enableshadow --passalgo=sha512
+keyboard --vckeymap=us --xlayouts='us'
+lang en_US.UTF-8
+network --bootproto=dhcp --ipv6=auto --activate --hostname=centos
+rootpw --plaintext vagrant
+timezone UTC
+user --name=vagrant --password=vagrant --plaintext --gecos="Vagrant"
+bootloader --location=mbr --boot-drive=sda
+clearpart --none --initlabel
+autopart --nolvm
+#part / --fstype="xfs" --ondisk=sda --maxsize=20480
 
-%packages --nobase --ignoremissing --excludedocs
-# vagrant needs this to copy initial files via scp
-openssh-clients
-sudo
-kernel-headers
-kernel-devel
-gcc
-make
-perl
-curl
-wget
-nfs-utils
--fprintd-pam
--intltool
-
-# unnecessary firmware
--aic94xx-firmware
--atmel-firmware
--b43-openfwwf
--bfa-firmware
--ipw2100-firmware
--ipw2200-firmware
--ivtv-firmware
--iwl100-firmware
--iwl1000-firmware
--iwl3945-firmware
--iwl4965-firmware
--iwl5000-firmware
--iwl5150-firmware
--iwl6000-firmware
--iwl6000g2a-firmware
--iwl6050-firmware
--libertas-usb8388-firmware
--ql2100-firmware
--ql2200-firmware
--ql23xx-firmware
--ql2400-firmware
--ql2500-firmware
--rt61pci-firmware
--rt73usb-firmware
--xorg-x11-drv-ati-firmware
--zd1211-firmware
+%packages
+@core
+%end
 
 %post
-# update root certs
-wget -O/etc/pki/tls/certs/ca-bundle.crt http://curl.haxx.se/ca/cacert.pem
-# sudo
-echo "%vagrant ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
+echo "vagrant ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
+chmod 0440 /etc/sudoers.d/vagrant
 sed -i "s/^.*requiretty/#Defaults requiretty/" /etc/sudoers
+%end
 
-# update
-yum update -y
+reboot
