Fixed security parameters for proper Docker operation

--- a/ks.cfg
+++ b/ks.cfg
@@ -8,6 +8,7 @@ network --bootproto=dhcp --ipv6=auto --activate --hostname=centos
 rootpw --plaintext vagrant
 timezone UTC
 user --name=vagrant --password=vagrant --plaintext --gecos="Vagrant"
+selinux --permissive
 bootloader --location=mbr --boot-drive=sda
 clearpart --none --initlabel
 autopart --nolvm
